Child Object Origin Snap and Mirror Problem #32987

Closed
opened 2012-10-27 15:17:03 +02:00 by Hikmet Koyuncu · 7 comments

%%%Blender 2.64a 64-bit
Windows 7 Ultimate 64-bit
Intel Core I5-2500K
8 GB RAM
Intel HD 3000 Graphic Card

Actually, maybe this is not a bug, but interesting and an unwanted situation.

If one object has an parent object and parent object is translate, rotate, scale etc. then, "Origin to 3D Cursor" command (and others) and "Object > Mirror" command not works properly. If "Apply" transformations for parent, then this commands works properly.

See attached blend file.%%%

%%%Blender 2.64a 64-bit Windows 7 Ultimate 64-bit Intel Core I5-2500K 8 GB RAM Intel HD 3000 Graphic Card Actually, maybe this is not a bug, but interesting and an unwanted situation. If one object has an parent object and parent object is translate, rotate, scale etc. then, "Origin to 3D Cursor" command (and others) and "Object > Mirror" command not works properly. If "Apply" transformations for parent, then this commands works properly. See attached blend file.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%- Mirror on transformed objects always is wacko, that's a math issue with trying to reconstuct location, rotation and size from a 4x4 matrix. It's an open issue for which we don't have answers (if that even is possible)

  • The 'origin to cursor' is buggy indeed. There's a whole lot of code trying to solve cases - unfortunately the coder of it isn't around anymore.
Let's see if someone dares to pick this up! %%%
%%%- Mirror on transformed objects always is wacko, that's a math issue with trying to reconstuct location, rotation and size from a 4x4 matrix. It's an open issue for which we don't have answers (if that even is possible) - The 'origin to cursor' is buggy indeed. There's a whole lot of code trying to solve cases - unfortunately the coder of it isn't around anymore. ``` Let's see if someone dares to pick this up! %%%
Author

%%%Thanks.

Maybe in future, pivot points translate like an object (example 3ds Max's "Pivot Only" command). This is pretty easy way for tanslate pivot (origin) point.%%%

%%%Thanks. Maybe in future, pivot points translate like an object (example 3ds Max's "Pivot Only" command). This is pretty easy way for tanslate pivot (origin) point.%%%
Member

%%%I have fixed the "Origin to 3D Cursor" issue (it was just using the wrong matrix to transform the origin offset), but am having trouble attaching a patch, so it's at http://pastebin.com/RwEgfCZ0 .

%%%

%%%I have fixed the "Origin to 3D Cursor" issue (it was just using the wrong matrix to transform the origin offset), but am having trouble attaching a patch, so it's at http://pastebin.com/RwEgfCZ0 . %%%
Member

%%%Hmm, looks like the attachment worked despite the error message, so never mind the pastebin thing!%%%

%%%Hmm, looks like the attachment worked despite the error message, so never mind the pastebin thing!%%%
Member

%%%In svn now, thanks Ben! Welcome back :)%%%

%%%In svn now, thanks Ben! Welcome back :)%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32987
No description provided.